# summonpy

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  react-native-pyjsi.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifestDeprecated.xml
android/src/main/java/com/pyjsi/: PyjsiModule.java  PyjsiPackage.java
android/src/main/java/com/pyjsi/bridge/: AssetExtractor.java
cpp/: py-ext-register.cpp  react-native-pyjsi.cpp  react-native-pyjsi.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/src/main/java/com/pyjsiexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift
example/ios/PyjsiExample/: LaunchScreen.storyboard
example/ios/PyjsiExample.xcodeproj/xcshareddata/xcschemes/: PyjsiExample.xcscheme
example/src/: App.tsx
ios/: Pyjsi.h  Pyjsi.mm
src/: index.tsx
